--- a/src/components/Header/SignupDropdown/SignupDropdown.scss
+++ b/src/components/Header/SignupDropdown/SignupDropdown.scss
@@ -6,7 +6,6 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-size: 1.5rem;
-    z-index: 80;
     .dropdown-menu{
         .dropdown-item {
             display: block;
